--- a/svelte-front/src/app.css
+++ b/svelte-front/src/app.css
@@ -58,6 +58,15 @@ html {
   gap: 1rem;
   width: 100%;
   margin-bottom: 1.5rem;
+  position: relative;
+}
+
+.input-button-container .error {
+  position: absolute;
+  bottom: -0.5rem;
+  left: 0;
+  font-size: 0.8rem;
+  color: var(--del-color);
 }
 
 .input-button-container > input {
